# MassGen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PR_DRAFT.md  README.md  README_PYPI.md  RELEASE_NOTES_v0.1.78.md  ROADMAP.md  ROADMAP_v0.1.78.md  ROADMAP_v0.1.79.md  ROADMAP_v0.1.80.md  ROADMAP_v0.1.82.md  ROADMAP_v0.1.83.md  ROADMAP_v0.1.84.md  ROADMAP_v0.1.86.md  ROADMAP_v0.1.87.md  ROADMAP_v0.1.88.md  ROADMAP_v0.1.89.md  ROADMAP_v0.1.90.md  ROADMAP_v0.1.92.md  pyproject.toml
docs/announcements/: current-release.md  feature-highlights.md  github-release-v0.1.77.md  github-release-v0.1.78.md  github-release-v0.1.79.md  github-release-v0.1.80.md  github-release-v0.1.81.md  github-release-v0.1.82.md  github-release-v0.1.83.md  github-release-v0.1.84.md  github-release-v0.1.85.md  github-release-v0.1.86.md  github-release-v0.1.87.md  github-release-v0.1.88.md  github-release-v0.1.89.md  github-release-v0.1.90.md  github-release-v0.1.91.md
docs/announcements/archive/: v0.1.76.md  v0.1.79.md  v0.1.81.md  v0.1.82.md  v0.1.85.md  v0.1.86.md  v0.1.90.md
docs/modules/: checkpoint.md  coordination_workflow.md  injection.md
docs/source/: conf.py  index.rst
docs/source/_extra/: llms.txt
docs/source/reference/: comparisons.rst  yaml_schema.rst
docs/source/reference/comparisons/: autogen.rst  crewai.rst  langgraph.rst
massgen/: __init__.py  agent_config.py  bootstrap_criteria.py  cli.py  config_validator.py  message_templates.py  orchestrator.py  score_utils.py  system_message_builder.py  system_prompt_sections.py
massgen/api_params_handler/: _api_params_handler_base.py
massgen/backend/: __init__.py  antigravity_cli.py  base.py  base_with_custom_tool_and_mcp.py  capabilities.py  cb_adaptive.py  cb_failover.py  cb_store.py  chat_completions.py  claude.py  codex.py  gemini.py  llm_circuit_breaker.py  response.py
massgen/configs/: README.md
massgen/configs/checkpoint/standalone_mcp/: fast_iteration.yaml  reviewers.yaml
massgen/configs/coordination/: bootstrap_inline_criteria.yaml  bootstrap_subagent_criteria.yaml
massgen/configs/features/: fast_iteration.yaml  fast_iteration_gemini_antigravity.yaml
massgen/configs/providers/antigravity/: antigravity_cli_local.yaml
massgen/filesystem_manager/: _constants.py  _filesystem_manager.py
massgen/frontend/displays/: content_handlers.py  textual_terminal_display.py  tui_event_pipeline.py
massgen/frontend/displays/shared/: tool_registry.py
massgen/frontend/displays/textual_themes/: base.tcss
massgen/frontend/displays/textual_widgets/: __init__.py  agent_status_ribbon.py  consensus_map.py  content_sections.py  copy_mode_banner.py  tool_card.py
massgen/frontend/web/: server.py
massgen/frontend/web/static/: index.html
massgen/frontend/web/static/assets/: _baseUniq-CxOtW_1c.js  _baseUniq-CxOtW_1c.js.map  arc-DF8LiNHB.js  arc-DF8LiNHB.js.map  architectureDiagram-VXUJARFQ-BmQEPIfS.js  architectureDiagram-VXUJARFQ-BmQEPIfS.js.map  base-80a1f760-0yu8noub.js  base-80a1f760-0yu8noub.js.map  blockDiagram-VD42YOAC-BkQjawIP.js  blockDiagram-VD42YOAC-BkQjawIP.js.map  c4Diagram-YG6GDRKO-BukIF5I4.js  c4Diagram-YG6GDRKO-BukIF5I4.js.map  channel-mhBKevdc.js  channel-mhBKevdc.js.map  chunk-4BX2VUAB-BRhVPdKj.js  chunk-4BX2VUAB-BRhVPdKj.js.map  chunk-55IACEB6-CF4EkuUD.js  chunk-55IACEB6-CF4EkuUD.js.map  chunk-B4BG7PRW-DWnrF9Ir.js  chunk-B4BG7PRW-DWnrF9Ir.js.map  chunk-DI55MBZ5-Co10LqGQ.js  chunk-DI55MBZ5-Co10LqGQ.js.map  chunk-FMBD7UC4-MifrobQU.js  chunk-FMBD7UC4-MifrobQU.js.map  chunk-QN33PNHL-CIQ8Cdte.js  chunk-QN33PNHL-CIQ8Cdte.js.map  chunk-QZHKN3VN-DQm-MDu7.js  chunk-QZHKN3VN-DQm-MDu7.js.map  chunk-TZMSLE5B-CtXp8rYG.js  chunk-TZMSLE5B-CtXp8rYG.js.map  classDiagram-2ON5EDUG-COXEa7T4.js  classDiagram-2ON5EDUG-COXEa7T4.js.map  classDiagram-v2-WZHVMYZB-COXEa7T4.js  classDiagram-v2-WZHVMYZB-COXEa7T4.js.map  clone-nNq9jbfE.js  clone-nNq9jbfE.js.map  consoleHook-59e792cb-F-XschFW.js  consoleHook-59e792cb-F-XschFW.js.map  cose-bilkent-S5V4N54A-DOcsBU-s.js  cose-bilkent-S5V4N54A-DOcsBU-s.js.map  (+59 more)
massgen/mcp_tools/: checklist_tools_server.py  hooks.py  subrun_utils.py
massgen/mcp_tools/native_hook_adapters/: antigravity_cli_adapter.py  codex_hook_script.py  gemini_cli_hook_script.py
massgen/mcp_tools/standalone/: README.md  checkpoint_instructions.md  checkpoint_mcp_server.py  default_safety_policy.py  quality_server.py  setup_instructions.py  validate_plan.py
massgen/tests/: test_antigravity_cli_backend.py  test_bootstrap_criteria.py  test_cb_adaptive.py  test_cb_failover.py  test_cb_observability.py  test_cb_store.py  test_cb_store_adversarial.py  test_checklist_tools_server.py  test_checkpoint_mcp_standalone.py  test_codex_hook_script.py  test_codex_native_hook_adapter.py  test_config_validator.py  test_config_wiring_refactors.py  test_coordination_config_wiring.py  test_criterion_feedback.py  test_discriminative_pruning.py  test_fast_iteration_mode.py  test_fast_mode.py  test_gemini_cli_hook_script.py  test_native_hook_adapters.py  test_position_bias_calibration.py  test_score_utils.py  test_standalone_checkpoint_backend_parity.py  test_standalone_checkpoint_config.py  test_standalone_checkpoint_injection.py  test_standalone_checkpoint_mcp_config.py  test_standalone_checkpoint_prompt.py  test_system_prompt_sections.py  test_validate_all_configs_script.py  test_video_extraction.py
massgen/tests/frontend/: test_consensus_map.py  test_copy_mode.py  test_standalone_checkpoint_tool_card.py  test_timeline_snapshot_scaffold.py
massgen/tests/integration/: test_checkpoint_integration.py
massgen/tool/_multimodal_tools/: image_backends.py  read_media.py  understand_image.py
openspec/changes/add-tui-consensus-map/: proposal.md  tasks.md
openspec/changes/add-tui-consensus-map/specs/textual-tui/: spec.md
openspec/changes/refactor-coordination-config-wiring/: design.md  proposal.md  tasks.md
openspec/changes/refactor-coordination-config-wiring/specs/coordination-config/: spec.md
webui/src/components/v2/channel/messages/: ToolCallMessageView.tsx
